--- a/i3status.conf
+++ b/i3status.conf
@@ -63,7 +63,7 @@ volume master {
 }
 
 memory {
-  format = "RAM: %used - %total"
+  format = "RAM: %used : %total"
     threshold_degraded = "2G"
     threshold_critical = "1G"
 }
