i3bar battery module update

--- a/i3status.conf
+++ b/i3status.conf
@@ -36,12 +36,12 @@ ethernet _first_ {
 }
 
 battery all {
-  format = "%status %percentage %remaining"
+  format = "%status %percentage"
     threshold_type = percentage
     low_threshold = 30
-    status_chr = "⚡ CHR"
-    status_bat = "BAT"
-    status_full = "FULL"
+    status_chr = "󰂄 CHR"
+    status_bat = "󱊣 BAT"
+    status_full = "󰁹 FUL"
     last_full_capacity = true
 }
 
