--- a/i3status.conf
+++ b/i3status.conf
@@ -41,7 +41,7 @@ battery all {
     low_threshold = 30
     status_chr = "󰂄 CHR"
     status_bat = "󱊣 BAT"
-    status_full = "󰁹 FUL"
+    status_full = "󰁹 FULL"
     last_full_capacity = true
 }
 
