--- a/config
+++ b/config
@@ -310,10 +310,16 @@ bar {
 }
 
 # class                 border    backgr.   text    indic.  child_border
-client.focused          $blue     $blue     $yellow $purple $blue
-client.unfocused        $darkgray $darkgray $aqua   $purple $darkgray
-client.focused_inactive $darkgray $darkgray $orange $purple $darkgray
-client.urgent           $red      $red      $white  $red    $red
+# client.focused          $blue     $blue     $yellow $purple $blue
+# client.unfocused        $darkgray $darkgray $aqua   $purple $darkgray
+# client.focused_inactive $darkgray $darkgray $orange $purple $darkgray
+# client.urgent           $red      $red      $white  $red    $red
+
+# class                 border    backgr.   text    indic.      child_border
+client.focused          $darkgray $blue     $yellow $darkgray   $darkgray
+client.unfocused        $darkgray $darkgray $aqua   $darkgray   $darkgray
+client.focused_inactive $darkgray $darkgray $orange $darkgray   $darkgray
+client.urgent           $red      $red      $white  $red        $red
 
 
 ####################
