bar colorscheme change

--- a/config
+++ b/config
@@ -281,6 +281,7 @@ set $darkgray #1d2021
 set $white    #ffffff
 set $black    #000000
 set $lgray    #bdae93
+set $stone    #3a3a3a
 
 # font used by i3 for titles and bars, global
 font pango:CaskaydiaCove Nerd Font Mono 12
@@ -313,8 +314,8 @@ bar {
 }
 
 # class                 border    backgr.   text    indic.  child_border
-client.focused          $darkgray $blue     $yellow $purple $darkgray
-client.unfocused        $darkgray $darkgray $aqua   $purple $darkgray
+client.focused          $darkgray $stone    $orange $purple $darkgray
+client.unfocused        $darkgray $darkgray $orange $purple $darkgray
 client.focused_inactive $darkgray $darkgray $orange $purple $darkgray
 client.urgent           $red      $red      $white  $red    $red
 
