--- a/config
+++ b/config
@@ -206,7 +206,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +20%
 exec_always --no-startup-id feh --bg-fill ~/.config/i3/vimkeybindings.png
 
 # Open current wallpaper
-bindsym $mod+b exec --no-startup-id gwenview "$(cat ~/.wallpaper)"
+bindsym $mod+b exec --no-startup-id feh -g 1920x1080 --auto-zoom --scale-down --image-bg black --action1 "gio trash %F" -- "$(cat ~/.wallpaper)"
 
 # Next wallpaper
 bindsym $mod+n exec --no-startup-id kill $(pstree -lp | grep -- wallpaper | sed "s/.*sleep(\([0-9]\+\)).*/\1/")
