--- a/config
+++ b/config
@@ -226,6 +226,10 @@ bindsym $mod+Ctrl+k resize grow height 5 px or 5 ppt
 bindsym $mod+Ctrl+j resize shrink height 5 px or 5 ppt
 bindsym $mod+Ctrl+h resize grow width 5 px or 5 ppt
 
+# Assign applications to specific workspaces
+for_window [class="firefox"] move to workspace $ws1
+for_window [class="konsole"] move to workspace $ws2
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
