--- a/config
+++ b/config
@@ -206,7 +206,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +20%
 exec_always --no-startup-id feh --bg-fill ~/.config/i3/fallout.jpg
 
 # Open current wallpaper
-bindsym $mod+b exec --no-startup-id feh --geometry 1920x1080 --scale-down --image-bg black --action1 "trashy %F" -- "$(cat ~/.wallpaper)"
+bindsym $mod+b exec --no-startup-id feh --geometry 1920x1080 --scale-down --image-bg black --action1 "trashy %F" --action2 "savefeh %F" -- "$(cat ~/.wallpaper)"
 
 # Next wallpaper
 bindsym $mod+n exec --no-startup-id kill $(pstree -lp | grep -- wallpaper | sed "s/.*sleep(\([0-9]\+\)).*/\1/")
@@ -227,8 +227,12 @@ bindsym $mod+Ctrl+j resize shrink height 5 px or 5 ppt
 bindsym $mod+Ctrl+h resize grow width 5 px or 5 ppt
 
 # Assign applications to specific workspaces
-# for_window [class="firefox"] move to workspace $ws1
-# for_window [class="konsole"] move to workspace $ws2
+for_window [class="konsole"] move to workspace $ws1
+for_window [class="firefox"] move to workspace $ws2
+for_window [class="virt-manager"] move to workspace $ws3
+for_window [class="Virt-manager"] move to workspace $ws3
+for_window [class="steam"] move to workspace $ws4
+for_window [class="czkawka_gui"] move to workspace $ws5
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
