--- a/config
+++ b/config
@@ -283,12 +283,12 @@ bar {
                 focused_workspace    $green    $green    $black
                 inactive_workspace   $darkgray $darkgray $orange
                 active_workspace     $darkgray $darkgray $orange
-                urgent_workspace     $orange   $orange   $black
+                urgent_workspace     $orange   $orange   $darkgray
         }
 }
 
-# class                 border    backgr.   text    indic.  child_border
-client.focused          $darkgray $stone    $orange $purple $darkgray
-client.unfocused        $darkgray $darkgray $orange $purple $darkgray
-client.focused_inactive $darkgray $darkgray $orange $purple $darkgray
-client.urgent           $darkgray $orange   $black  $purple $darkgray
+# class                 border    backgr.   text      indic.  child_border
+client.focused          $darkgray $stone    $orange   $purple $darkgray
+client.unfocused        $darkgray $darkgray $orange   $purple $darkgray
+client.focused_inactive $darkgray $darkgray $orange   $purple $darkgray
+client.urgent           $darkgray $orange   $darkgray $purple $darkgray
