--- a/config
+++ b/config
@@ -233,6 +233,9 @@ for_window [class="virt-manager"] move to workspace $ws3
 for_window [class="Virt-manager"] move to workspace $ws3
 for_window [class="steam"] move to workspace $ws4
 for_window [class="czkawka_gui"] move to workspace $ws5
+for_window [class="LibreWolf"] move to workspace $ws6
+for_window [class="minecraft-launcher"] move to workspace $ws7
+for_window [class="Minecraft.*"] move to workspace $ws7
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
