--- a/config
+++ b/config
@@ -236,6 +236,8 @@ for_window [class="czkawka_gui"] move to workspace $ws5
 for_window [class="LibreWolf"] move to workspace $ws6
 for_window [class="minecraft-launcher"] move to workspace $ws7
 for_window [class="Minecraft.*"] move to workspace $ws7
+for_window [class="prismlauncher"] move to workspace $ws7
+for_window [class="PrismLauncher"] move to workspace $ws7
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
