--- a/config
+++ b/config
@@ -230,17 +230,17 @@ bindsym $mod+Ctrl+j resize shrink height 5 px or 5 ppt
 bindsym $mod+Ctrl+h resize grow width 5 px or 5 ppt
 
 # Assign applications to specific workspaces
-for_window [class="konsole"] move to workspace $ws1
-for_window [class="firefox"] move to workspace $ws2
-for_window [class="virt-manager"] move to workspace $ws3
-for_window [class="Virt-manager"] move to workspace $ws3
-for_window [class="steam"] move to workspace $ws4
-for_window [class="czkawka_gui"] move to workspace $ws5
-for_window [class="LibreWolf"] move to workspace $ws6
-for_window [class="minecraft-launcher"] move to workspace $ws7
-for_window [class="Minecraft.*"] move to workspace $ws7
-for_window [class="prismlauncher"] move to workspace $ws7
-for_window [class="PrismLauncher"] move to workspace $ws7
+# for_window [class="konsole"] move to workspace $ws1
+# for_window [class="firefox"] move to workspace $ws2
+# for_window [class="virt-manager"] move to workspace $ws3
+# for_window [class="Virt-manager"] move to workspace $ws3
+# for_window [class="steam"] move to workspace $ws4
+# for_window [class="czkawka_gui"] move to workspace $ws5
+# for_window [class="LibreWolf"] move to workspace $ws6
+# for_window [class="minecraft-launcher"] move to workspace $ws7
+# for_window [class="Minecraft.*"] move to workspace $ws7
+# for_window [class="prismlauncher"] move to workspace $ws7
+# for_window [class="PrismLauncher"] move to workspace $ws7
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
