--- a/config
+++ b/config
@@ -50,7 +50,7 @@ floating_modifier $mod
 #tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty --command tmux new-session -A -s console
+bindsym $mod+Return exec --no-startup-id tmux new-session -d -s "Mainframe" || tmux new-window -t "Mainframe": && alacritty --command tmux attach-session -t "Mainframe"
 
 # kill focused window
 bindsym $mod+q kill
