--- a/config
+++ b/config
@@ -33,7 +33,7 @@ font pango:monospace 8
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
+# exec --no-startup-id nm-applet
 
 set $refresh_i3status killall -SIGUSR1 i3status
 # Use wpctl to ajusst volume in Pipewire
@@ -50,7 +50,7 @@ floating_modifier $mod
 #tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id tmux new-session -d -s "Mainframe" || tmux new-window -t "Mainframe": && alacritty --command tmux attach-session -t "Mainframe"
+bindsym $mod+Return exec --no-startup-id alacritty --command tmux new-session -A -s "MAINFRAME"
 
 # kill focused window
 bindsym $mod+q kill
