--- a/config
+++ b/config
@@ -35,6 +35,19 @@ font pango:monospace 8
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 # exec --no-startup-id nm-applet
 
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+
 set $refresh_i3status killall -SIGUSR1 i3status
 # Use wpctl to ajusst volume in Pipewire
 bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ -l 1 && $refresh_i3status
@@ -56,6 +69,18 @@ bindsym $mod+Return exec --no-startup-id alacritty --command tmux new-session -A
 bindsym $mod+q kill
 # Close all windows on all workspaces (any class string)
 bindsym $mod+Shift+q [class=".*"] kill
+
+# Kill all windows on specific workspace
+bindsym $mod+Ctrl+1 [workspace=$ws1] kill
+bindsym $mod+Ctrl+2 [workspace=$ws2] kill
+bindsym $mod+Ctrl+3 [workspace=$ws3] kill
+bindsym $mod+Ctrl+4 [workspace=$ws4] kill
+bindsym $mod+Ctrl+5 [workspace=$ws5] kill
+bindsym $mod+Ctrl+6 [workspace=$ws6] kill
+bindsym $mod+Ctrl+7 [workspace=$ws7] kill
+bindsym $mod+Ctrl+8 [workspace=$ws8] kill
+bindsym $mod+Ctrl+9 [workspace=$ws9] kill
+bindsym $mod+Ctrl+10 [workspace=$ws10] kill
 
 # start dmenu (a program launcher)
 bindsym $mod+r exec --no-startup-id dmenu_run
@@ -114,19 +139,6 @@ bindsym $mod+a focus parent
 
 # focus the child container
 bindsym $mod+d focus child
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
